# CargoForge-C

./: .clang-format  .dockerignore  .editorconfig  .env.example  .gitignore  404.html  API.md  BEFORE_AFTER.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEMO.md  Dockerfile  Doxyfile  LICENSE  Makefile  PLAY_GAME.sh  README.md  ROADMAP.md  USAGE.md  WHATS_NEW.md  analysis.c  cargoforge  cargoforge.h  cargoforge.h.bak  cli.c  cli.h  constraints.h  docker-compose.yml  index.html  interface.go  json_output.c  json_output.h  main.c  optimizer.c  parser.c  placement_2d.c  placement_2d.h  placement_3d.c  placement_3d.h  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-build.yml
01-why-c-and-the-toolchain/: index.html
02-your-first-c-program/: index.html
03-types-control-flow-functions/: index.html
04-cli-git-reproducibility/: index.html
05-structs-enums-the-data-model/: index.html
06-the-preprocessor-and-headers/: index.html
07-strings-and-char-arrays/: index.html
08-error-handling-without-exceptions/: index.html
09-pointers-and-addresses/: index.html
10-the-stack-and-the-heap/: index.html
101/: .gitignore  README.md  mkdocs.yml  requirements.txt
101/lessons/: 01-why-c-and-the-toolchain.md  02-your-first-c-program.md  03-types-control-flow-functions.md  04-cli-git-reproducibility.md  05-structs-enums-the-data-model.md  06-the-preprocessor-and-headers.md  07-strings-and-char-arrays.md  08-error-handling-without-exceptions.md  09-pointers-and-addresses.md  10-the-stack-and-the-heap.md  11-malloc-free-and-ownership.md  12-arrays-buffers-and-bounds.md  13-memory-bugs.md  14-make-and-cmake.md  15-unit-testing-in-c.md  16-continuous-integration.md  17-buoyancy-and-archimedes.md  18-displacement-density-draft.md  19-the-box-hull-model.md  20-the-hydrostatic-table.md  21-center-of-gravity.md  22-buoyancy-and-the-metacenter.md  23-gm-why-ships-self-right.md  24-trim-and-heel.md  25-free-surface-and-imo-criteria.md  26-config-and-manifest-formats.md  27-tokenizing-and-parsing-in-c.md  28-validation-and-robustness.md  29-dangerous-goods-imdg-parsing.md  30-the-stowage-problem.md  31-first-fit-decreasing.md  32-3d-bins-and-weight.md  33-constraints-segregation-stackability.md  34-the-analysis-module.md  35-hydrostatic-interpolation.md  36-tanks-and-free-surface.md  37-longitudinal-strength.md  38-sanitizers.md  39-static-analysis.md  40-fuzzing.md  (+21 more)
101/scripts/: extract_glossary_terms.py
11-malloc-free-and-ownership/: index.html
12-arrays-buffers-and-bounds/: index.html
13-memory-bugs/: index.html
14-make-and-cmake/: index.html
15-unit-testing-in-c/: index.html
16-continuous-integration/: index.html
17-buoyancy-and-archimedes/: index.html
18-displacement-density-draft/: index.html
19-the-box-hull-model/: index.html
20-the-hydrostatic-table/: index.html
21-center-of-gravity/: index.html
22-buoyancy-and-the-metacenter/: index.html
23-gm-why-ships-self-right/: index.html
24-trim-and-heel/: index.html
25-free-surface-and-imo-criteria/: index.html
26-config-and-manifest-formats/: index.html
27-tokenizing-and-parsing-in-c/: index.html
28-validation-and-robustness/: index.html
29-dangerous-goods-imdg-parsing/: index.html
30-the-stowage-problem/: index.html
31-first-fit-decreasing/: index.html
32-3d-bins-and-weight/: index.html
33-constraints-segregation-stackability/: index.html
34-the-analysis-module/: index.html
35-hydrostatic-interpolation/: index.html
36-tanks-and-free-surface/: index.html
37-longitudinal-strength/: index.html
38-sanitizers/: index.html
39-static-analysis/: index.html
40-fuzzing/: index.html
41-coverage-and-benchmarks/: index.html
42-the-cli-and-output-formats/: index.html
43-the-library-and-public-api/: index.html
44-the-json-rpc-server/: index.html
45-wasm-and-on-device/: index.html
46-the-whole-pipeline/: index.html
47-frontier-classed-software/: index.html
assets/: sidebar-toggle.js  terms-data.js  terms-popup.css
assets/widgets/: _core.css  _core.js  cg-balance-beam.js  free-surface-explorer.js  hydro-interpolation-explorer.js  (+2 more)
docs/: API_INTEGRATION.md  ARCHITECTURE.md  BEFORE_AFTER.txt  BUG_JOURNAL.md  CLI_GUIDE.md  DEPLOYMENT.md  EXAMPLES.md  FEATURES.md  GAME_UI_README.md  PROFESSIONAL_TRAINING.md  QUICK_REFERENCE.md  TESTING_COMPLETE.md  WHATS_NEW.md  cargoforge.1
examples/: .cargoforgerc.example  bad_ship.cfg  large_cargo.txt  library_example.c  realistic_cargo.txt  realistic_ship.cfg  sample_cargo.txt  sample_cargo_dg.txt  sample_hydro.csv  sample_ship.cfg  sample_ship_full.cfg  sample_tanks.csv
glossary/: index.html
include/: cargoforge.h  cli.h  constraints.h  hydrostatics.h  imdg.h  json_output.h  libcargoforge.h  longitudinal_strength.h  placement_2d.h  placement_3d.h  server.h  tanks.h
lab-01-foundations/: index.html
lab-02-c-in-depth/: index.html
lab-03-memory/: index.html
lab-04-build-test/: index.html
lab-05-flotation/: index.html
lab-06-stability/: index.html
lab-07-parsing/: index.html
lab-08-placement/: index.html
lab-09-engine/: index.html
lab-10-quality/: index.html
lab-11-shipping/: index.html
lab-12-capstone/: index.html
scripts/: TEST_AND_DEMO.sh  bench.sh  check.sh  deploy.sh  fuzz.sh
search/: search_index.json
src/: analysis.c  cli.c  constraints.c  hydrostatics.c  imdg.c  json_output.c  libcargoforge.c  longitudinal_strength.c  main.c  parser.c  placement_2d.c  placement_3d.c  server.c  tanks.c
tests/: run_parser_test  test_analysis.c  test_constraints.c  test_hydrostatics.c  test_imdg.c  test_library.c  test_longitudinal_strength.c  test_parser  test_parser.c  test_placement_2d  test_placement_2d.c  test_tanks.c
validation/: validate_benchmark  validate_benchmark.c
web/: README.md  START.sh  _coverpage.md  _sidebar.md  api-integration.md  changelog.md  cli-reference.md  configuration.md  dangerous-goods.md  demo.html  demo.md  examples.md  index.html  input-formats.md  output-formats.md  quickstart.md  stability.md  subcommands.md
(+61 files in other folders)
